# meiqiu-dict

./: .gitignore  AGENTS.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: build-dict.mjs  build-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  commands.rs  config.rs  dict.rs  error.rs  events.rs  hotkey.rs  lib.rs  main.rs  selection.rs  state.rs  tray.rs  tts.rs  uia.rs  window.rs
src-tauri/tests/: architecture.rs
src-ui/: entry.ts
src-ui/apps/: FloaterApp.vue  MainApp.vue  PopupApp.vue
src-ui/assets/: styles.css
src-ui/features/settings/: SettingsPage.vue
src-ui/shared/: ipc.ts  skins.ts  theme.ts  types.ts
