[package]
name = "meiqiu-dict"
version = "0.1.0"
description = "MeiQiuDict - offline EN->ZH dictionary with selection capture for Windows."
edition = "2024"
rust-version = "1.85"

[lib]
name = "meiqiu_dict_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-autostart = "2.2"
tauri-plugin-single-instance = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-log = "2.2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
once_cell = "1.20"
anyhow = "1"
thiserror = "2"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
rdev = "0.5"
arboard = "3.4"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
